--- a/projects/vs2012/Plugin.vcxproj
+++ b/projects/vs2012/Plugin.vcxproj
@@ -26,25 +26,25 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120_CTP_Nov2012</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120_CTP_Nov2012</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <TargetName>MyPlugin</TargetName>
+    <TargetName>Dev-plugin</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -134,12 +134,13 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;PLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_NO_LIB;NOMINMAX;_WIN32_WINNT=0x601;WINVER=0x601;_WIN32_IE=0x600;NDEBUG;_WINDOWS;_USRDLL;PLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>../../</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../dwt\include;../../;../../boost</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4800</DisableSpecificWarnings>
+      <AdditionalOptions>/D "DWT_SHARED" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -147,6 +148,10 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalOptions>/EXPORT:pluginInit %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>
+      </AdditionalLibraryDirectories>
+      <AdditionalDependencies>comctl32.lib;wtsapi32.lib;shlwapi.lib;winmm.lib;uxtheme.lib;uuid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalManifestDependencies>type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='*' publicKeyToken='6595b64144ccf1df' language='*';%(AdditionalManifestDependencies)</AdditionalManifestDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -255,6 +260,134 @@
     <ClCompile Include="..\..\src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\dwt\include\dwt\Application.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Activate.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Border.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Caption.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Child.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Children.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Clickable.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Closeable.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Collection.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Colorable.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Columns.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Command.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\ContextMenu.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\CustomDraw.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Data.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Dialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\DragDrop.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Enabled.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\EraseBackground.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\FileFilter.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Fonts.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Help.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Keyboard.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\MinMax.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Mouse.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Painting.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Raw.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Scrollable.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Selection.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Sizable.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Timer.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Update.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\aspects\Visible.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Atom.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\CanvasClasses.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Clipboard.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\CommandLine.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Cursor.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Dispatcher.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Dispatchers.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\doxygen.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\DWTException.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\dwt_dwmapi.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\dwt_shlobj.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\dwt_vsstyle.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\dwt_vssym32.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Events.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\forward.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\GCCHeaders.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\LibraryLoader.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Message.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Point.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Rectangle.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Bitmap.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Brush.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Font.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Handle.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Icon.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\ImageList.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Pen.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\resources\Region.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Taskbar.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Texts.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Theme.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\tstring.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\check.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\DateTimeUtil.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\GDI.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\HoldRedraw.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\HoldResize.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\RegKey.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\StringConversion.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\StringUtils.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\TimeSpan.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\tstream.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\win32\ApiHelpers.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\win32\Version.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\util\xCeptionSmartUtilities.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\VCDesktopHeaders.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\Widget.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\WidgetCreator.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Button.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\CheckBox.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ColorDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Column.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ComboBox.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Composite.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Container.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Control.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\DateTime.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\FolderDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\FontDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Frame.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Grid.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\GroupBox.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Header.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Label.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Link.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\LoadDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\MDIChild.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\MDIFrame.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\MDIParent.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Menu.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\MessageBox.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ModalDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ModelessDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Notification.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ProgressBar.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\RadioButton.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Rebar.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\RichTextBox.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\SaveDialog.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ScrolledContainer.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Slider.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Spinner.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Splitter.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\SplitterContainer.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\StatusBar.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Table.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\TableTree.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\TabView.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\TextBox.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ToolBar.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\ToolTip.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Tree.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\VirtualTree.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\widgets\Window.h" />
+    <ClInclude Include="..\..\dwt\include\dwt\WindowsHeaders.h" />
     <ClInclude Include="..\..\pluginsdk\Config.h" />
     <ClInclude Include="..\..\pluginsdk\Connections.h" />
     <ClInclude Include="..\..\pluginsdk\Core.h" />
