--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 boost*/
-projects/vs2012/x64*/
-projects/vs2012/x86*/
+x64/
+x86/
+.vs/
+.vs
+v17/
+Release/
+Debug/
+*.tlog
+*.ipch
+*.obj
+*.pdb
+*.dll
+*.log
+*.exe
+*.suo
+*.bin
+*.db
