--- a/projects/vs2012/Plugin.vcxproj
+++ b/projects/vs2012/Plugin.vcxproj
@@ -88,8 +88,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>../../dwt/include;../../;../../boost;../../boost/libs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4100;4127;4244;4307;4324;4510;4512;4610;4706;4800;4996</DisableSpecificWarnings>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <DisableSpecificWarnings>4100;4127;4244;4307;4324;4510;4512;4610;4706;4800;4996;4505</DisableSpecificWarnings>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -107,8 +107,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>../../dwt/include;../../;../../boost;../../boost/libs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4800</DisableSpecificWarnings>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <DisableSpecificWarnings>4800;4505</DisableSpecificWarnings>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -123,9 +123,9 @@
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <AdditionalIncludeDirectories>../../dwt/include;../../;../../boost;../../boost/libs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4100;4127;4244;4307;4324;4510;4512;4610;4706;4800</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4100;4127;4244;4307;4324;4456;4510;4512;4610;4706;4800;4505</DisableSpecificWarnings>
       <AdditionalOptions>/D "DWT_SHARED" /FS /D "_CRT_SECURE_NO_WARNINGS" /D "_HAS_DEPRECATED_ALLOCATOR_MEMBERS" %(AdditionalOptions)</AdditionalOptions>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -145,10 +145,10 @@
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <AdditionalIncludeDirectories>../../dwt/include;../../;../../boost;../../boost/libs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4100;4127;4244;4307;4324;4510;4512;4610;4706;4800</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4063;4100;4127;4244;4267;4307;4324;4458;4505;4510;4512;4610;4706;4800;4505</DisableSpecificWarnings>
       <AdditionalOptions>/D "DWT_SHARED" /FS /D "_CRT_SECURE_NO_WARNINGS" /D "_HAS_DEPRECATED_ALLOCATOR_MEMBERS" %(AdditionalOptions)</AdditionalOptions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -255,6 +255,7 @@
     <ClCompile Include="..\..\pluginsdk\Config.cpp" />
     <ClCompile Include="..\..\pluginsdk\Connections.cpp" />
     <ClCompile Include="..\..\pluginsdk\Core.cpp" />
+    <ClCompile Include="..\..\pluginsdk\DataAccess.cpp" />
     <ClCompile Include="..\..\pluginsdk\Hooks.cpp" />
     <ClCompile Include="..\..\pluginsdk\Hubs.cpp" />
     <ClCompile Include="..\..\pluginsdk\Logger.cpp" />
@@ -265,6 +266,7 @@
     <ClCompile Include="..\..\src\GUI.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
     <ClCompile Include="..\..\src\Plugin.cpp" />
+    <ClCompile Include="..\..\src\SettingsDlg.cpp" />
     <ClCompile Include="..\..\src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -399,6 +401,7 @@
     <ClInclude Include="..\..\pluginsdk\Config.h" />
     <ClInclude Include="..\..\pluginsdk\Connections.h" />
     <ClInclude Include="..\..\pluginsdk\Core.h" />
+    <ClInclude Include="..\..\pluginsdk\DataAccess.h" />
     <ClInclude Include="..\..\pluginsdk\Hooks.h" />
     <ClInclude Include="..\..\pluginsdk\Hubs.h" />
     <ClInclude Include="..\..\pluginsdk\Logger.h" />
@@ -410,6 +413,7 @@
     <ClInclude Include="..\..\src\GUI.h" />
     <ClInclude Include="..\..\src\Plugin.h" />
     <ClInclude Include="..\..\src\resource.h" />
+    <ClInclude Include="..\..\src\SettingsDlg.h" />
     <ClInclude Include="..\..\src\stdafx.h" />
     <ClInclude Include="..\..\src\version.h" />
   </ItemGroup>
